# sd-pgmr

./: .gitignore  LICENSE  README.md  sd-pgmr.code-workspace
hw/SD-PGMR/: SD-PGMR.kicad_pcb  SD-PGMR.kicad_prl  SD-PGMR.kicad_pro  SD-PGMR.kicad_sch  eco-0001_a.kicad_sch
hw/SD-PGMR/bom/: SD-PGMR-v1.0-ibom.html  SD-PGMR-v2.0-ibom.html
hw/SD-PGMR/gerber/: SD-PGMR-B_Cu.gbr  SD-PGMR-B_Mask.gbr  SD-PGMR-B_Silkscreen.gbr  SD-PGMR-Edge_Cuts.gbr  SD-PGMR-F_Cu.gbr  SD-PGMR-F_Mask.gbr  SD-PGMR-F_Paste.gbr  SD-PGMR-F_Silkscreen.gbr  SD-PGMR-In1_Cu.gbr  SD-PGMR-In2_Cu.gbr  SD-PGMR-PTH-drl.gbr
hw/SD-PGMR/gerber/_history/v1_0/: SD-PGMR-B_Cu.gbr  SD-PGMR-B_Paste.gbr  SD-PGMR-F_Cu.gbr  SD-PGMR-F_Mask.gbr  SD-PGMR-F_Paste.gbr  SD-PGMR-F_Silkscreen.gbr  SD-PGMR-In1_Cu.gbr  SD-PGMR-NPTH-drl.gbr  SD-PGMR-PTH-drl.gbr  SD-PGMR-job.gbrjob
sw/pico/src/: CMakeLists.txt  board.c  board.h  debug_hw.c  debug_support.c  debug_support.h  main.c  memmap_custom.ld  multicore.c  multicore.h  picoutil.c  system_defs.h  try_throw_catch.h  util.c  util.h
sw/pico/src/_template/: CMakeLists.txt  xyz.c  xyz.h
sw/pico/src/_template/include/: xyz.h
sw/pico/src/app/: CMakeLists.txt  README.md  app.c
sw/pico/src/app/deviceops/: CMakeLists.txt  pdops.c  prog_device.c
sw/pico/src/app/deviceops/cmd/: cmds.c  cmds.h
sw/pico/src/app/deviceops/include/: pdops.h  prog_device.h
sw/pico/src/app/include/: app.h  app_t.h
sw/pico/src/app/menumgr/: CMakeLists.txt  menumgr.c
sw/pico/src/app/menumgr/include/: menumgr.h  menumgr_t.h
sw/pico/src/app/shell/: CMakeLists.txt  shell.c
sw/pico/src/app/shell/cmd/: CMakeLists.txt  cmd.c
sw/pico/src/app/shell/include/: shell.h
sw/pico/src/app/shell/term/: term.c
sw/pico/src/cmt/: CMakeLists.txt  cmt.c  cmt.h  cmt_heap.c  cmt_heap.h  cmt_t.h
sw/pico/src/cmt/include/: cmt.h  cmt_t.h
sw/pico/src/dbus/: CMakeLists.txt  dbus.c
sw/pico/src/dbus/cmd/: CMakeLists.txt  cmds.c  cmds.h
sw/pico/src/dbus/include/: dbus.h
sw/pico/src/debugging/: CMakeLists.txt  db_hardfault.c  debug_hw.c  debug_support.c
sw/pico/src/debugging/cmd/: cmds.c  cmds.h
sw/pico/src/debugging/include/: debug_support.h
sw/pico/src/deviceops/: CMakeLists.txt  pdops.c  pdops.h  prog_device.c  prog_device.h
sw/pico/src/deviceops/cmd/: CMakeLists.txt  cmds.c
sw/pico/src/deviceops/include/: pdops.h  prog_device.h
sw/pico/src/display/: CMakeLists.txt  display.h
sw/pico/src/display/display_spi/: CMakeLists.txt  display_spi_ops.c  display_spi_ops.h
sw/pico/src/display/dispops/: CMakeLists.txt  dispops.h  dispspi_ops.c
sw/pico/src/display/fonts/: CMakeLists.txt  font_9_10_h.c  font_9_10_h.h
sw/pico/src/display/include/: display.h
sw/pico/src/display/oled1106/: CMakeLists.txt  oled1106.c  oled1106.h  oled1106_spi.c
sw/pico/src/display/oled1106/include/: oled1106.h
sw/pico/src/display/oled1106_spi/: CMakeLists.txt  display_oled1106.c  display_oled1106.h  oled1106_spi.c  oled1106_spi.h
sw/pico/src/dskops/: CMakeLists.txt  dskops.c  dskops.h
sw/pico/src/dskops/cmd/: cmds.c  cmds.h
sw/pico/src/hid/: CMakeLists.txt  README.md  hid.c  hid.h
sw/pico/src/hwrt/: CMakeLists.txt  hwrt.c  hwrt.h  hwrt1.c  hwrt_t.h
sw/pico/src/include/: board.h  msgpost.h  multicore.h  util.h
sw/pico/src/lib/: CMakeLists.txt
sw/pico/src/lib/sd_card/: CMakeLists.txt
sw/pico/src/lib/sd_card/include/: util.h
sw/pico/src/lib/sd_card/sd_driver/: hw_config.c  sd_card.c  sd_spi.c  spi.c  spi.h
sw/pico/src/lib/sd_card/src/: glue.c  my_debug.c  rtc.c
sw/pico/src/picohlp/: CMakeLists.txt  picoutil.c  picoutil.h  rtc_support.c  rtc_support.h  vrtc.c
sw/pico/src/picohlp/cmd/: cmds.c  cmds.h
sw/pico/src/picohlp/include/: rppins.h
sw/pico/src/rotary_encoder/: CMakeLists.txt  quadrature_encoder.pio  re_pbsw.c  re_pbsw.h  rotary_encoder.c  rotary_encoder.h
sw/pico/src/rotary_encoder/include/: re_pbsw.h  rotary_encoder.h
sw/pico/src/shell/: CMakeLists.txt  shell.c  shell.h  shell_stub.c
sw/pico/src/shell/cmd/: cmd.c  cmd.h  cmd_t.h
sw/pico/src/shell/cmds/: CMakeLists.txt  debug.c  debug.h  devrdwr.c  devrdwr.h
sw/pico/src/shell/include/: shell.h
sw/pico/src/shell/term/: term.c  term.h
sw/pico/src/util/: util.c  util.h
